# QShield-v1

./: .gitattributes  .gitignore  Makefile  Makefile.am  QShield  README.md  config.h.in~  configure.ac  enclave.edl  enclave_u.c  enclave_u.h  main
Application/: enclave_u.c  enclave_u.h  main.c  main.cpp
Enclave/: Makefile.am  enclave.c  enclave.cpp  enclave.edl  enclave.h  enclave_t.c  enclave_t.h
Software/: libsgx-enclave-common_2.3.101.46683-1_amd64.deb
ThirdPartyLibrary/: math.h  tpl.h
ThirdPartyLibrary/pbc/: Makefile.am  configure.ac
ThirdPartyLibrary/pbc/arith/: random.c  ternary_extension_field.c
ThirdPartyLibrary/pbc/ecc/: e_param.c
ThirdPartyLibrary/pbc/include/: pbc_field.h
ThirdPartyLibrary/pbc/misc/: utils.c
app-src/: main.c  main.h
app-src/.deps/: main.Po
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
enc-src/: Makefile.am  enclave.c  enclave.edl  enclave.h  enclave_t.c  enclave_t.h
enc-src/.deps/: enclave.Po  enclave_t.Po
eval/: Makefile.am  core
eval/app-src/: main.c  main.h  naive_operators.c  naive_operators.h  test.c  test.h  type.h
eval/enc-src/: enclave.c  enclave.edl  enclave.h  enclave_t.c  enclave_t.h
eval/results/: aggregator.txt  cdb_aggregator.txt  cdb_joiner.txt  cdb_projector.txt  cdb_selector.txt  dec_drawer.py  drawer.py  escheme_sgx_dec_1.txt  escheme_sgx_dec_2.txt  eval.eps  joiner.txt  nai_aggregator.txt  nai_joiner.txt  nai_joiner.txt.bk  nai_projector.txt  nai_projector.txt.bk  nai_selector.txt  nai_selector.txt.bk  op.eps  op_drawer.py  op_drawer_time.py  operator_eval.eps  selector.txt  sgx_aggregator.txt  sgx_dec_1.txt  sgx_dec_2.txt  sgx_joiner.txt  sgx_projector.txt  sgx_selector.txt
eval/results.bk/: drawer.py  escheme_sgx_dec_2.txt  eval.eps  projector.txt  sgx_dec_2.txt
eval/results/dec/: escheme_sgx_dec.txt
eval/results/e/: e.eps  e_drawer_time.py  sgx_dec.txt
eval/results/e-scheme/: e.eps
eval/results/protocol/: protocol_drawer_time.py
eval/results/src/: cdb_aggregator.txt  cdb_aggregator_total.txt  cdb_joiner.txt  cdb_projector_total.txt  cdb_selector_total.txt  escheme_sgx_dec_1.txt  nai_aggregator.txt  nai_joiner.txt  nai_projector.txt  nai_selector.txt  sgx_aggregator.txt  sgx_aggregator.txt.bk  sgx_dec_1.txt  sgx_joiner.txt  sgx_projector.txt  sgx_projector.txt.bk  sgx_selector.txt  sgx_selector.txt.bk  store.txt
eval/results/src/op_w_rewrite/: cdb_aggregator.txt  cdb_joiner.txt  cdb_projector.txt  cdb_selector.txt
eval/results/src/op_wo_rewrite/: cdb_aggregator.txt  cdb_projector.txt  cdb_selector.txt
tpl/e-scheme/: Makefile.am  bootstrap  configure.ac  e-scheme.c  e-scheme.h
tpl/gmp/: sgx_tgmp.h
tpl/others/: Makefile.am  configure.ac  tpl.c
tpl/others/.deps/: tpl.Po
tpl/others/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
tpl/pbc/: Makefile.am
tpl/pbc/arith/: field.c  fieldquadratic.c  init_random.c  montfp.c  naivefp.c  poly.c  random.c
tpl/pbc/arith/.deps/: libsgx_tpbc_a-dlog.Po  libsgx_tpbc_a-fasterfp.Po  libsgx_tpbc_a-fastfp.Po  libsgx_tpbc_a-field.Po  libsgx_tpbc_a-fieldquadratic.Po  libsgx_tpbc_a-fp.Po  libsgx_tpbc_a-init_random.Po  libsgx_tpbc_a-montfp.Po  libsgx_tpbc_a-multiz.Po  libsgx_tpbc_a-naivefp.Po  libsgx_tpbc_a-poly.Po  libsgx_tpbc_a-random.Po  libsgx_tpbc_a-ternary_extension_field.Po  libsgx_tpbc_a-z.Po
tpl/pbc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
tpl/pbc/ecc/: a_param.c  curve.c  pairing.c  param.c
tpl/pbc/ecc/.deps/: libsgx_tpbc_a-a_param.Po  libsgx_tpbc_a-curve.Po  libsgx_tpbc_a-d_param.Po  libsgx_tpbc_a-e_param.Po  libsgx_tpbc_a-eta_T_3.Po  libsgx_tpbc_a-f_param.Po  libsgx_tpbc_a-g_param.Po  libsgx_tpbc_a-hilbert.Po  libsgx_tpbc_a-mnt.Po  libsgx_tpbc_a-mpc.Po  libsgx_tpbc_a-pairing.Po  libsgx_tpbc_a-param.Po  libsgx_tpbc_a-singular.Po
tpl/pbc/include/: pbc.h  pbc_sgx_ext.h
tpl/pbc/misc/: memory.c  pbc_sgx_ext.c  utils.c
tpl/pbc/misc/.deps/: libsgx_tpbc_a-darray.Po  libsgx_tpbc_a-extend_printf.Po  libsgx_tpbc_a-get_time.Po  libsgx_tpbc_a-memory.Po  libsgx_tpbc_a-symtab.Po  libsgx_tpbc_a-utils.Po
