AC_INIT(libtpl, 0.1, cyx.xjtu@gmail.com)

AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AM_PROG_CC_C_O

SGX_INIT()

SGX_TSTDC_CHECK_HEADERS([stdio.h])
SGX_TSTDC_CHECK_FUNCS([fprintf])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT()
